--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
-  command = "cd client && npm run build"
-  publish = "client/dist"
+  base = "client"
+  command = "npm run build"
+  publish = "dist"
 
 [[redirects]]
   from = "/*"
